<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true"
    android:background="#F7FFFFFF"
    android:minWidth="19dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:background="#F7FFFFFF"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F7FFFFFF"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F7FFFFFF"
                app:subtitleTextColor="#0A0A0A"
                app:titleTextColor="#111111"
                />




            <!--    Your code here -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_bg"
                        android:padding="1dp">

                        <ImageView
                            android:id="@+id/img1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/earthquake"
                            android:contentDescription="@string/picture_of_earthquake" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                           android:layout_centerInParent="true"
                            android:letterSpacing="1"
                            android:text="@string/earthquake"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            android:shadowColor="@color/black"
                            android:shadowRadius="20"
                            android:textStyle="bold"/>

                        <Button
                            android:id="@+id/btn1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:onClick="kathleen"
                            android:background="@android:color/transparent" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_bg"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/landslide"
                            android:contentDescription="@string/picture_of_landslide" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:letterSpacing="1"
                            android:text="@string/landslide"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            android:shadowColor="@color/black"
                            android:shadowRadius="20"
                            android:textStyle="bold"/>

                        <Button
                            android:id="@+id/btn2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:onClick="kathleen" />

                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_bg"
                        android:padding="1dp">

                        <ImageView
                            android:id="@+id/img3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/storm"
                            android:contentDescription="@string/picture_of_typhoon" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:letterSpacing="1"
                            android:text="@string/typhoon"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            android:shadowColor="@color/black"
                            android:shadowRadius="20"
                            android:textStyle="bold"/>

                        <Button
                            android:id="@+id/btn3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:onClick="kathleen"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_bg"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/volcano"
                            android:contentDescription="@string/volcano" />
                        <TextView
                            android:id="@+id/text_volcano"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:letterSpacing="1"
                            android:text="@string/volcanic"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            android:shadowColor="@color/black"
                            android:shadowRadius="20"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/text_volcano"
                            android:layout_centerHorizontal="true"
                            android:letterSpacing="1"
                            android:shadowColor="@color/black"
                            android:shadowRadius="20"
                            android:text="@string/eruption"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:onClick="kathleen"/>


                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_bg"
                        android:padding="1dp">

                        <ImageView
                            android:id="@+id/img5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/fire"
                            android:contentDescription="@string/picture_of_fire"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:letterSpacing="1"
                            android:text="@string/fire"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            android:shadowColor="@color/black"
                            android:shadowRadius="20"
                            android:textStyle="bold"
                            android:onClick="kathleen"/>


                        <Button
                            android:id="@+id/btn5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:onClick="kathleen"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons_bg"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img6"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/flood"
                            android:contentDescription="@string/picture_of_flood"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:letterSpacing="1"
                            android:text="@string/flood"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            android:shadowColor="@color/black"
                            android:shadowRadius="20"
                            android:textStyle="bold"/>


                        <Button
                            android:id="@+id/btn6"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:onClick="kathleen"/>


                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>