<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Earthquake"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="479dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/eq1"
                android:contentDescription="@string/earthquakepicture" />



        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="410dp"
            android:layout_height="50dp"
            android:background="@drawable/contentbutton_bg"
            android:layout_marginTop="5dp"

            >

            <ImageView
                android:id="@+id/img1"

                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_alignEnd="@id/btn_c1"
                android:src="@drawable/ic_twotone_navigate_next_24" />

            <Button
                android:id="@+id/btn_c1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto"
                android:text="@string/drop_cover_hold_on"
                android:onClick="kat"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="19sp" />
        </RelativeLayout>


    </LinearLayout>




    <!--next-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="410dp"
            android:layout_height="50dp"
            android:background="@drawable/contentbutton_bg"
            android:layout_marginTop="5dp"
            android:outlineSpotShadowColor="@color/black">

            <ImageView
                android:id="@+id/img2"

                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_alignEnd="@id/btn_c2"
                android:src="@drawable/ic_twotone_navigate_next_24" />

            <Button
                android:id="@+id/btn_c2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto"
                android:text="@string/outside_or_in_a_car"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="19sp" />
        </RelativeLayout>


    </LinearLayout>


    <!--next-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl3"
            android:layout_width="410dp"
            android:layout_height="50dp"
            android:background="@drawable/contentbutton_bg"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/img3"

                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_alignEnd="@id/btn_c3"
                android:src="@drawable/ic_twotone_navigate_next_24" />

            <Button
                android:id="@+id/btn_c3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto"
                android:text="@string/after_an_earthquake"
                android:textAlignment="textStart"
                android:onClick="kat"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="19sp" />
        </RelativeLayout>


    </LinearLayout>
</LinearLayout>


